Color scheme and content update

--- a/contact.html
+++ b/contact.html
@@ -473,9 +473,9 @@
               <!-- Column -->
               <div class="column col-lg-6 col-md-12 col-sm-12">
                 <h2>
-                  Listening to <br />
-                  your wishes <br />
-                  & ideas!
+                  Let's grow <br />
+                  your business <br />
+                  today!
                 </h2>
                 <a href="contact.html" class="theme-btn btn-style-two"
                   ><span class="txt">Schedule a Discussion</span></a
