--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Todesko Bookkeeping - Serving Kingwood &amp; Morgantown</title>
+    <title>
+      Todesko Bookkeeping - Serving Kingwood and Morgantown businesses
+    </title>
 
     <!-- Favicons, App Icons and Themes -->
     <link
@@ -2018,8 +2020,8 @@
             </div>
             <h1>Ready to Get Started?</h1>
             <div class="text">
-              Let's grow your business together! Call or email me using the
-              buttons below.
+              Let's grow your business together! Call or email me to get
+              started.
             </div>
             <div class="btns-box">
               <a href="tel:+1-304-555-5555"
@@ -2044,9 +2046,9 @@
               <!-- Column -->
               <div class="column col-lg-6 col-md-12 col-sm-12">
                 <h2>
-                  Listening to <br />
-                  your wishes <br />
-                  & ideas!
+                  Let's grow <br />
+                  your business <br />
+                  today!
                 </h2>
                 <a href="contact.html" class="theme-btn btn-style-two"
                   ><span class="txt">Schedule a Discussion</span></a
