Added owner's content

--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Todesko Bookkeeping | Blog</title>
+    <title>Lauren Todesko Bookkeeping, LLC | Blog</title>
 
     <!-- Favicons, App Icons and Themes -->
     <link
@@ -168,13 +168,14 @@
                           ><span data-hover="Home">Home</span></a
                         >
                       </li>
-                      <li class="dropdown current">
+                      <!-- <li class="dropdown"> -->
+                      <li class="current">
                         <a href="#"><span data-hover="About">About</span></a>
-                        <ul>
-                          <li><a href="#about">About Me</a></li>
-                          <li><a href="#testimonials">Client Reviews</a></li>
+                        <!-- <ul>
+                          <li><a href="index.html#about">About Me</a></li>
+                          <li><a href="index.html#testimonials">Client Reviews</a></li>
                           <li><a href="blog.html">Blog</a></li>
-                        </ul>
+                        </ul> -->
                       </li>
                       <li>
                         <a href="#services"
@@ -207,7 +208,7 @@
                     ></a>
                     <a
                       target="_blank"
-                      href="http://linkedin.com/"
+                      href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
                       class="fab fa-linkedin-in"
                     ></a>
                   </div>
@@ -602,9 +603,9 @@
                     >
                   </li>
                   <li>
-                    <a href="tel:+1-304-555-5555"
-                      ><span class="icon flaticon-whatsapp"></span>(304) 555 -
-                      5555</a
+                    <a href="tel:+1-304-692-6223"
+                      ><span class="icon flaticon-whatsapp"></span>(304)
+                      692-6223</a
                     >
                   </li>
                   <li>
@@ -777,9 +778,8 @@
               It’s easy to get in contact with me. Either call or write!
             </div>
             <div class="btns-box">
-              <a href="tel:+1-304-555-5555"
-                ><span class="icon flaticon-phone-call"></span>(304) 555 -
-                5555</a
+              <a href="tel:+1-304-692-6223"
+                ><span class="icon flaticon-phone-call"></span>(304) 692-6223</a
               >
               <a href="mailto:lauren@todeskobookkeeping.com"
                 ><span class="icon flaticon-envelope"></span
@@ -812,7 +812,8 @@
                 <h4>Contact</h4>
                 <div class="address">
                   Lauren Todesko Bookkeeping, LLC <br />
-                  Kingwood, WV 26519
+                  Kingwood, WV 26519 <br />
+                  <a href="tel:+1-304-692-6223">+1-304-692-6223</a>
                 </div>
                 <!-- Social Box -->
                 <div class="social-box">
@@ -828,7 +829,7 @@
                   ></a>
                   <a
                     target="_blank"
-                    href="http://linkedin.com/"
+                    href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
                     class="fab fa-linkedin-in"
                   ></a>
                 </div>
@@ -850,7 +851,7 @@
 
               <!-- Copyright Column -->
               <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
-                <div class="copyright">&copy; Coastal Crypto 2021.</div>
+                <div class="copyright">&copy; KJ Magill 2021.</div>
               </div>
             </div>
           </div>
