--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Todesko Bookkeeping | Contact Us</title>
+    <title>Lauren Todesko Bookkeeping, LLC | Contact Us</title>
 
     <!-- Favicons, App Icons and Themes -->
     <link
@@ -127,7 +127,10 @@
               <div class="pull-left logo-box">
                 <div class="logo">
                   <a href="index.html"
-                    ><img src="images/logo.png" alt="" title=""
+                    ><img
+                      src="images/logo.png"
+                      alt="Lauren Todesko Bookkeeping, LLC"
+                      title="Logo"
                   /></a>
                 </div>
               </div>
@@ -168,15 +171,16 @@
                           ><span data-hover="Home">Home</span></a
                         >
                       </li>
-                      <li class="dropdown">
-                        <a href="#"><span data-hover="About">About</span></a>
-                        <ul>
+                      <!-- <li class="dropdown"> -->
+                      <li>
+                        <a href="index.html#about"
+                          ><span data-hover="About">About</span></a
+                        >
+                        <!-- <ul>
                           <li><a href="index.html#about">About Me</a></li>
-                          <li>
-                            <a href="index.html#testimonials">Client Reviews</a>
-                          </li>
+                          <li><a href="index.html#testimonials">Client Reviews</a></li>
                           <li><a href="blog.html">Blog</a></li>
-                        </ul>
+                        </ul> -->
                       </li>
                       <li>
                         <a href="index.html#services"
@@ -209,7 +213,7 @@
                     ></a>
                     <a
                       target="_blank"
-                      href="http://linkedin.com/"
+                      href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
                       class="fab fa-linkedin-in"
                     ></a>
                   </div>
@@ -231,7 +235,10 @@
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="index.html"
-                ><img src="images/logo-2.png" alt="" title=""
+                ><img
+                  src="images/logo.png"
+                  alt="Lauren Todesko Bookkeeping, LLC"
+                  title="Logo"
               /></a>
             </div>
 
@@ -247,13 +254,10 @@
       <!-- Page Title -->
       <section
         class="page-title style-two"
-        style="background-image: url(images/background/3.jpg)"
+        style="background-image: url(images/resource/contact_header.png)"
       >
         <div class="auto-container">
-          <h1>
-            Stop by and <br />
-            say hi!
-          </h1>
+          <h1>Let's set up a call!</h1>
         </div>
       </section>
       <!-- End Page Title -->
@@ -266,7 +270,7 @@
             <div class="title-column col-lg-5 col-md-12 cols-m-12">
               <div class="inner-column">
                 <div class="sec-title">
-                  <h2>Let’s Talk</h2>
+                  <h2>Contact Me</h2>
                 </div>
                 <ul class="contact-list">
                   <li>
@@ -276,9 +280,9 @@
                     >
                   </li>
                   <li>
-                    <a href="tel:+1-304-555-5555"
-                      ><span class="icon flaticon-whatsapp"></span>(304) 555 -
-                      5555</a
+                    <a href="tel:+1-304-692-6223"
+                      ><span class="icon flaticon-whatsapp"></span>(304)
+                      692-6223</a
                     >
                   </li>
                   <li>
@@ -451,9 +455,8 @@
               It’s easy to get in contact with me. Either call or write!
             </div>
             <div class="btns-box">
-              <a href="tel:+1-304-555-5555"
-                ><span class="icon flaticon-phone-call"></span>(304) 555 -
-                5555</a
+              <a href="tel:+1-304-692-6223"
+                ><span class="icon flaticon-phone-call"></span>(304) 692-6223</a
               >
               <a href="mailto:lauren@todeskobookkeeping.com"
                 ><span class="icon flaticon-envelope"></span
@@ -486,7 +489,8 @@
                 <h4>Contact</h4>
                 <div class="address">
                   Lauren Todesko Bookkeeping, LLC <br />
-                  Kingwood, WV 26519
+                  Kingwood, WV 26519 <br />
+                  <a href="tel:+1-304-692-6223">+1-304-692-6223</a>
                 </div>
                 <!-- Social Box -->
                 <div class="social-box">
@@ -502,7 +506,7 @@
                   ></a>
                   <a
                     target="_blank"
-                    href="http://linkedin.com/"
+                    href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
                     class="fab fa-linkedin-in"
                   ></a>
                 </div>
@@ -524,7 +528,7 @@
 
               <!-- Copyright Column -->
               <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
-                <div class="copyright">&copy; Coastal Crypto 2021.</div>
+                <div class="copyright">&copy; KJ Magill 2021.</div>
               </div>
             </div>
           </div>
