--- a/error-page.html
+++ b/error-page.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Todesko Bookkeeping | Error Loading Page</title>
+    <title>Lauren Todesko Bookkeeping, LLC | Error Page</title>
 
     <!-- Favicons, App Icons and Themes -->
     <link
@@ -168,16 +168,19 @@
                           ><span data-hover="Home">Home</span></a
                         >
                       </li>
-                      <li class="dropdown">
-                        <a href="#"><span data-hover="About">About</span></a>
-                        <ul>
-                          <li><a href="#about">About Me</a></li>
-                          <li><a href="#testimonials">Client Reviews</a></li>
+                      <!-- <li class="dropdown"> -->
+                      <li>
+                        <a href="index.html#about"
+                          ><span data-hover="About">About</span></a
+                        >
+                        <!-- <ul>
+                          <li><a href="index.html#about">About Me</a></li>
+                          <li><a href="index.html#testimonials">Client Reviews</a></li>
                           <li><a href="blog.html">Blog</a></li>
-                        </ul>
+                        </ul> -->
                       </li>
                       <li>
-                        <a href="#services"
+                        <a href="index.html#services"
                           ><span data-hover="Services">Services</span></a
                         >
                       </li>
@@ -207,7 +210,7 @@
                     ></a>
                     <a
                       target="_blank"
-                      href="http://linkedin.com/"
+                      href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
                       class="fab fa-linkedin-in"
                     ></a>
                   </div>
@@ -316,7 +319,7 @@
                   ></a>
                   <a
                     target="_blank"
-                    href="http://linkedin.com/"
+                    href="https://www.linkedin.com/company/lauren-todesko-bookkeeping-llc/"
                     class="fab fa-linkedin-in"
                   ></a>
                 </div>
