Updated graphics and Contact header

--- a/contact.html
+++ b/contact.html
@@ -257,7 +257,7 @@
         style="background-image: url(images/resource/contact_header.png)"
       >
         <div class="auto-container">
-          <h1>Let's set up a call!</h1>
+          <h1>Almost Heaven...</h1>
         </div>
       </section>
       <!-- End Page Title -->
