Added mobile media query

--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
                     <div class="btn-box">
                       <div class="clearfix">
                         <a href="#services" class="theme-btn btn-style-two"
-                          ><span class="txt">Our Services</span></a
+                          ><span class="txt">Book Now!</span></a
                         >
                         <a href="contact.html" class="theme-btn btn-style-three"
-                          ><span class="txt">Book a Call!</span></a
+                          ><span class="txt">Our Services</span></a
                         >
                       </div>
                     </div>
@@ -301,10 +301,10 @@
                     <div class="btn-box">
                       <div class="clearfix">
                         <a href="#services" class="theme-btn btn-style-two"
-                          ><span class="txt">Our Services</span></a
+                          ><span class="txt">Book Now!</span></a
                         >
                         <a href="contact.html" class="theme-btn btn-style-three"
-                          ><span class="txt">Book a Call!</span></a
+                          ><span class="txt">Our Services</span></a
                         >
                       </div>
                     </div>
@@ -336,10 +336,10 @@
                     <div class="btn-box">
                       <div class="clearfix">
                         <a href="#services" class="theme-btn btn-style-two"
-                          ><span class="txt">Our Services</span></a
+                          ><span class="txt">Book Now!</span></a
                         >
                         <a href="contact.html" class="theme-btn btn-style-three"
-                          ><span class="txt">Book a Call!</span></a
+                          ><span class="txt">Our Services</span></a
                         >
                       </div>
                     </div>
