Fixed styling and content issues. Updated graphics and favicon

--- a/error-page.html
+++ b/error-page.html
@@ -193,14 +193,14 @@
                   <!-- Button Box -->
                   <div class="button-box">
                     <a href="contact.html" class="theme-btn btn-style-one"
-                      ><span class="txt">Contact Me</span></a
+                      ><span class="txt">Contact</span></a
                     >
                   </div>
                   <!-- Social Box -->
                   <div class="social-box">
                     <a
                       target="_blank"
-                      href="http://facebook.com/"
+                      href="https://www.facebook.com/lschaffer17"
                       class="fab fa-facebook-f"
                     ></a>
                     <!-- <a
@@ -309,7 +309,7 @@
                 <div class="social-box">
                   <a
                     target="_blank"
-                    href="http://facebook.com/"
+                    href="https://www.facebook.com/lschaffer17"
                     class="fab fa-facebook-f"
                   ></a>
                   <!-- <a
@@ -333,15 +333,29 @@
               <!-- Nav Column -->
               <div class="nav-column col-lg-6 col-md-12 col-sm-12">
                 <ul>
-                  <li><a href="contact.html">Terms & Conditions</a></li>
-                  <li><a href="contact.html">Privacy Policy</a></li>
-                  <li><a href="contact.html">Help & Support</a></li>
+                  <li>
+                    <a
+                      href="http://bit.ly/TodeskoBookkeepingTermsConditions"
+                      target="_blank"
+                      >Terms & Conditions</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.privacypolicies.com/generic/"
+                      target="_blank"
+                      >Privacy Policy</a
+                    >
+                  </li>
+                  <li><a href="support.html">Help & Support</a></li>
                 </ul>
               </div>
 
               <!-- Copyright Column -->
               <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
-                <div class="copyright">&copy; Coastal Crypto 2021.</div>
+                <div class="copyright">
+                  Handcrafter with 💛 by KJ Magill &copy; 2021.
+                </div>
               </div>
             </div>
           </div>
