--- a/blog.html
+++ b/blog.html
@@ -191,14 +191,14 @@
                   <!-- Button Box -->
                   <div class="button-box">
                     <a href="contact.html" class="theme-btn btn-style-one"
-                      ><span class="txt">Contact Me</span></a
+                      ><span class="txt">Contact</span></a
                     >
                   </div>
                   <!-- Social Box -->
                   <div class="social-box">
                     <a
                       target="_blank"
-                      href="http://facebook.com/"
+                      href="https://www.facebook.com/lschaffer17"
                       class="fab fa-facebook-f"
                     ></a>
                     <!-- <a
@@ -740,7 +740,7 @@
 
                       <div class="form-group col-lg-12 col-md-12 col-sm-12">
                         <button type="submit" class="theme-btn btn-style-two">
-                          <span class="txt">Contact Me</span>
+                          <span class="txt">Submit</span>
                         </button>
                       </div>
                     </div>
@@ -773,18 +773,20 @@
                 ><img src="images/icons/triangles.png" alt=""
               /></span>
             </div>
-            <h1>Ready to Start This?</h1>
+            <h1>Ready to Get Started?</h1>
             <div class="text">
-              It’s easy to get in contact with me. Either call or write!
+              Call or email me today to take your first step towards peace of
+              mind.
             </div>
             <div class="btns-box">
-              <a href="tel:+1-304-692-6223"
-                ><span class="icon flaticon-phone-call"></span>(304) 692-6223</a
-              >
-              <a href="mailto:lauren@todeskobookkeeping.com"
-                ><span class="icon flaticon-envelope"></span
-                >lauren@todeskobookkeeping.com</a
-              >
+              <a href="tel:+1-304-692-6223">
+                <span class="icon flaticon-phone-call"></span>
+                (304) 692-6223
+              </a>
+              <a href="mailto:lauren@todeskobookkeeping.com">
+                <span class="icon flaticon-envelope"></span>
+                Send an Email
+              </a>
             </div>
           </div>
         </div>
@@ -819,7 +821,7 @@
                 <div class="social-box">
                   <a
                     target="_blank"
-                    href="http://facebook.com/"
+                    href="https://www.facebook.com/lschaffer17"
                     class="fab fa-facebook-f"
                   ></a>
                   <!-- <a
@@ -843,15 +845,29 @@
               <!-- Nav Column -->
               <div class="nav-column col-lg-6 col-md-12 col-sm-12">
                 <ul>
-                  <li><a href="contact.html">Terms & Conditions</a></li>
-                  <li><a href="contact.html">Privacy Policy</a></li>
-                  <li><a href="contact.html">Help & Support</a></li>
+                  <li>
+                    <a
+                      href="http://bit.ly/TodeskoBookkeepingTermsConditions"
+                      target="_blank"
+                      >Terms & Conditions</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="https://www.privacypolicies.com/generic/"
+                      target="_blank"
+                      >Privacy Policy</a
+                    >
+                  </li>
+                  <li><a href="support.html">Help & Support</a></li>
                 </ul>
               </div>
 
               <!-- Copyright Column -->
               <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
-                <div class="copyright">&copy; KJ Magill 2021.</div>
+                <div class="copyright">
+                  Handcrafter with 💛 by KJ Magill &copy; 2021.
+                </div>
               </div>
             </div>
           </div>
