Added accessibility details

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
               <!-- Logo Box -->
               <div class="pull-left logo-box">
                 <div class="logo">
-                  <a href="index.html"
-                    ><img src="images/logo.png" alt="" title=""
+                  <a href="/"
+                    ><img src="images/logo.png" alt="Lauren Todesko Bookkeeping, LLC" title="Logo"
                   /></a>
                 </div>
               </div>
@@ -164,7 +164,7 @@
                   >
                     <ul class="navigation clearfix">
                       <li class="current">
-                        <a href="index.html"
+                        <a href="/"
                           ><span data-hover="Home">Home</span></a
                         >
                       </li>
@@ -231,8 +231,8 @@
           <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
           <nav class="menu-box">
             <div class="nav-logo">
-              <a href="index.html"
-                ><img src="images/logo-2.png" alt="" title=""
+              <a href="/"
+                ><img src="images/logo.png" alt="Lauren Todesko Bookkeeping, LLC" title="Logo"
               /></a>
             </div>
 
@@ -279,7 +279,7 @@
                 <div class="image-column col-lg-5 col-md-12 col-sm-12">
                   <div class="inner-column">
                     <div class="image">
-                      <img src="images/main-slider/money.png" alt="" />
+                      <img src="images/main-slider/money.png" alt="money, paperwork and credit cards" />
                     </div>
                   </div>
                 </div>
@@ -315,7 +315,7 @@
                 <div class="image-column col-lg-5 col-md-12 col-sm-12">
                   <div class="inner-column">
                     <div class="image">
-                      <img src="images/main-slider/hierarchy.png" alt="" />
+                      <img src="images/main-slider/hierarchy.png" alt="a third-person abstract view of a corporate hierarchy" />
                     </div>
                   </div>
                 </div>
@@ -350,7 +350,7 @@
                 <div class="image-column col-lg-5 col-md-12 col-sm-12">
                   <div class="inner-column">
                     <div class="image">
-                      <img src="images/main-slider/busy.png" alt="" />
+                      <img src="images/main-slider/busy.png" alt="an illustration of a businessman with six arms each doing a different task" />
                     </div>
                   </div>
                 </div>
@@ -383,7 +383,7 @@
                   data-wow-delay="0ms"
                   data-wow-duration="1500ms"
                 >
-                  <img src="images/resource/about.png" alt="" />
+                  <img src="images/resource/about.png" alt="Lauren Schaffer Todesko's portrait" />
                 </div>
               </div>
             </div>
@@ -506,7 +506,7 @@
                   data-wow-delay="0ms"
                   data-wow-duration="1500ms"
                 >
-                  <img src="images/resource/services.png" alt="" />
+                  <img src="images/resource/services.png" alt="cartoon illustration of a woman, calculator, balance sheet and large coins" />
                 </div>
               </div>
             </div>
@@ -780,13 +780,13 @@
           <div class="inner-container">
             <div class="triangle-layer">
               <span class="icon"
-                ><img src="images/icons/triangles.png" alt=""
+                ><img src="images/icons/triangles.png" alt="animation"
               /></span>
               <span class="icon"
-                ><img src="images/icons/triangles.png" alt=""
+                ><img src="images/icons/triangles.png" alt="animation"
               /></span>
               <span class="icon"
-                ><img src="images/icons/triangles.png" alt=""
+                ><img src="images/icons/triangles.png" alt="animation"
               /></span>
             </div>
             <h1>Ready to Get Started?</h1>
