--- a/support.html
+++ b/support.html
@@ -126,7 +126,7 @@
               <!-- Logo Box -->
               <div class="pull-left logo-box">
                 <div class="logo">
-                  <a href="index.html"
+                  <a href="/"
                     ><img
                       src="images/logo.png"
                       alt="Lauren Todesko Bookkeeping, LLC"
@@ -167,23 +167,21 @@
                   >
                     <ul class="navigation clearfix">
                       <li>
-                        <a href="index.html"
-                          ><span data-hover="Home">Home</span></a
-                        >
+                        <a href="/"><span data-hover="Home">Home</span></a>
                       </li>
                       <!-- <li class="dropdown"> -->
                       <li>
-                        <a href="index.html#about"
+                        <a href="/#about"
                           ><span data-hover="About">About</span></a
                         >
                         <!-- <ul>
-                          <li><a href="index.html#about">About Me</a></li>
-                          <li><a href="index.html#testimonials">Client Reviews</a></li>
+                          <li><a href="/#about">About Me</a></li>
+                          <li><a href="/#testimonials">Client Reviews</a></li>
                           <li><a href="blog.html">Blog</a></li>
                         </ul> -->
                       </li>
                       <li>
-                        <a href="index.html#services"
+                        <a href="/#services"
                           ><span data-hover="Services">Services</span></a
                         >
                       </li>
@@ -234,7 +232,7 @@
           <!-- Here the same menu as Header will show automatically via JavaScript -->
           <nav class="menu-box">
             <div class="nav-logo">
-              <a href="index.html"
+              <a href="/"
                 ><img
                   src="images/logo.png"
                   alt="Lauren Todesko Bookkeeping, LLC"
@@ -443,13 +441,13 @@
           <div class="inner-container">
             <div class="triangle-layer">
               <span class="icon"
-                ><img src="images/icons/triangles.png" alt=""
+                ><img src="images/icons/triangles.png" alt="animation"
               /></span>
               <span class="icon"
-                ><img src="images/icons/triangles.png" alt=""
+                ><img src="images/icons/triangles.png" alt="animation"
               /></span>
               <span class="icon"
-                ><img src="images/icons/triangles.png" alt=""
+                ><img src="images/icons/triangles.png" alt="animation"
               /></span>
             </div>
             <h1>Ready to Get Started?</h1>
