--- a/blog-detail.html
+++ b/blog-detail.html
@@ -126,8 +126,11 @@
               <!-- Logo Box -->
               <div class="pull-left logo-box">
                 <div class="logo">
-                  <a href="index.html"
-                    ><img src="images/logo.png" alt="" title=""
+                  <a href="/"
+                    ><img
+                      src="images/logo.png"
+                      alt="Lauren Todesko Bookkeeping, LLC"
+                      title="Logo"
                   /></a>
                 </div>
               </div>
@@ -164,16 +167,14 @@
                   >
                     <ul class="navigation clearfix">
                       <li>
-                        <a href="index.html"
-                          ><span data-hover="Home">Home</span></a
-                        >
+                        <a href="/"><span data-hover="Home">Home</span></a>
                       </li>
                       <!-- <li class="dropdown"> -->
                       <li class="current">
                         <a href="#"><span data-hover="About">About</span></a>
                         <!-- <ul>
-                          <li><a href="index.html#about">About Me</a></li>
-                          <li><a href="index.html#testimonials">Client Reviews</a></li>
+                          <li><a href="/#about">About Me</a></li>
+                          <li><a href="/#testimonials">Client Reviews</a></li>
                           <li><a href="blog.html">Blog</a></li>
                         </ul> -->
                       </li>
@@ -229,8 +230,11 @@
           <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
           <nav class="menu-box">
             <div class="nav-logo">
-              <a href="index.html"
-                ><img src="images/logo-2.png" alt="" title=""
+              <a href="/"
+                ><img
+                  src="images/logo.png"
+                  alt="Lauren Todesko Bookkeeping, LLC"
+                  title="Logo"
               /></a>
             </div>
 
@@ -979,13 +983,13 @@
           <div class="inner-container">
             <div class="triangle-layer">
               <span class="icon"
-                ><img src="images/icons/triangles.png" alt=""
+                ><img src="images/icons/triangles.png" alt="animation"
               /></span>
               <span class="icon"
-                ><img src="images/icons/triangles.png" alt=""
+                ><img src="images/icons/triangles.png" alt="animation"
               /></span>
               <span class="icon"
-                ><img src="images/icons/triangles.png" alt=""
+                ><img src="images/icons/triangles.png" alt="animation"
               /></span>
             </div>
             <h1>Ready to Get Started?</h1>
