--- a/error-page.html
+++ b/error-page.html
@@ -126,8 +126,11 @@
               <!-- Logo Box -->
               <div class="pull-left logo-box">
                 <div class="logo">
-                  <a href="index.html"
-                    ><img src="images/logo-2.png" alt="" title=""
+                  <a href="/"
+                    ><img
+                      src="images/logo.png"
+                      alt="Lauren Todesko Bookkeeping, LLC"
+                      title="Logo"
                   /></a>
                 </div>
               </div>
@@ -164,23 +167,21 @@
                   >
                     <ul class="navigation clearfix">
                       <li>
-                        <a href="index.html"
-                          ><span data-hover="Home">Home</span></a
-                        >
+                        <a href="/"><span data-hover="Home">Home</span></a>
                       </li>
                       <!-- <li class="dropdown"> -->
                       <li>
-                        <a href="index.html#about"
+                        <a href="/#about"
                           ><span data-hover="About">About</span></a
                         >
                         <!-- <ul>
-                          <li><a href="index.html#about">About Me</a></li>
-                          <li><a href="index.html#testimonials">Client Reviews</a></li>
+                          <li><a href="/#about">About Me</a></li>
+                          <li><a href="/#testimonials">Client Reviews</a></li>
                           <li><a href="blog.html">Blog</a></li>
                         </ul> -->
                       </li>
                       <li>
-                        <a href="index.html#services"
+                        <a href="/#services"
                           ><span data-hover="Services">Services</span></a
                         >
                       </li>
@@ -231,8 +232,11 @@
           <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
           <nav class="menu-box">
             <div class="nav-logo">
-              <a href="index.html"
-                ><img src="images/logo-2.png" alt="" title=""
+              <a href="/"
+                ><img
+                  src="images/logo.png"
+                  alt="Lauren Todesko Bookkeeping, LLC"
+                  title="Logo"
               /></a>
             </div>
 
@@ -249,7 +253,7 @@
       <section class="error-section">
         <div class="auto-container">
           <div class="image">
-            <img src="images/resource/error.png" alt="" />
+            <img src="images/resource/error.png" alt="error graphic" />
           </div>
           <h3>Sorry... page not found!</h3>
 
@@ -273,7 +277,7 @@
 
           <!-- Button Box -->
           <div class="button-box text-center">
-            <a href="index.html" class="theme-btn btn-style-one"
+            <a href="/" class="theme-btn btn-style-one"
               ><span class="txt">Back to Homepage</span></a
             >
           </div>
