Fixed typos and edited readme

--- a/contact.html
+++ b/contact.html
@@ -541,7 +541,7 @@
               <!-- Copyright Column -->
               <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
                 <div class="copyright">
-                  Handcrafter with 💛 by KJ Magill &copy; 2021.
+                  Handcrafted with 💛 by KJ Magill &copy; 2021.
                 </div>
               </div>
             </div>
