Media query tweaks for mobile

--- a/error-page.html
+++ b/error-page.html
@@ -88,6 +88,22 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
+    <!-- Open Graph / Social / Search preview content -->
+    <meta property="og:image" content="images/resource/og-image.png" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://www.todeskobookkeeping.com/error-page.html"
+    />
+    <meta
+      property="og:title"
+      content="Lauren Todesko Bookkeeping, LLC | Error Loading Page"
+    />
+    <meta
+      property="og:description"
+      content="Sorry, there was an error processing your request."
+    />
+
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
@@ -194,7 +210,7 @@
                   <!-- Button Box -->
                   <div class="button-box">
                     <a href="contact.html" class="theme-btn btn-style-one"
-                      ><span class="txt">Contact</span></a
+                      ><span class="txt">Contact Me</span></a
                     >
                   </div>
                   <!-- Social Box -->
