--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
       content="images/favicons/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#ffffff" />
+    <meta property="og:image" content="images/resource/og-image.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.todeskobookkeeping.com/" />
+    <meta property="og:title" content="Lauren Todesko Bookkeeping, LLC Official Website" />
+    <meta property="og:description" content="We provide affordable accounting & bookkeeping services" />
 
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
@@ -193,7 +198,7 @@
                   <!-- Button Box -->
                   <div class="button-box">
                     <a href="contact.html" class="theme-btn btn-style-one"
-                      ><span class="txt">Contact</span></a
+                      ><span class="txt">Contact Me</span></a
                     >
                   </div>
                   <!-- Social Box -->
@@ -264,10 +269,10 @@
                     </div>
                     <div class="btn-box">
                       <div class="clearfix">
-                        <a href="contact.html" class="theme-btn btn-style-two"
+                        <a href="contact.html" class="theme-btn mobile-btn btn-style-two"
                           ><span class="txt">Book Now</span></a
                         >
-                        <a href="#services" class="theme-btn btn-style-three"
+                        <a href="#services" class="theme-btn mobile-btn btn-style-three"
                           ><span class="txt">My Services</span></a
                         >
                       </div>
@@ -300,10 +305,10 @@
                     </div>
                     <div class="btn-box">
                       <div class="clearfix">
-                        <a href="contact.html" class="theme-btn btn-style-two
+                        <a href="contact.html" class="theme-btn mobile-btn btn-style-two
                           ><span class="txt">Book Now</span></a
                         >
-                        <a href="#services" class="theme-btn btn-style-three"
+                        <a href="#services" class="theme-btn mobile-btn btn-style-three"
                           ><span class="txt">My Services</span></a
                         >
                       </div>
@@ -335,10 +340,10 @@
                     </div>
                     <div class="btn-box">
                       <div class="clearfix">
-                        <a href="contact.html" class="theme-btn btn-style-two"
+                        <a href="contact.html" class="theme-btn mobile-btn btn-style-two"
                           ><span class="txt">Book Now</span></a
                         >
-                        <a href="#services" class="theme-btn btn-style-three"
+                        <a href="#services" class="theme-btn mobile-btn btn-style-three"
                           ><span class="txt">My Services</span></a
                         >
                       </div>
