--- a/support.html
+++ b/support.html
@@ -88,6 +88,21 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
+    <meta property="og:image" content="images/resource/og-image.png" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://www.todeskobookkeeping.com/support.html"
+    />
+    <meta
+      property="og:title"
+      content="Lauren Todesko Bookkeeping, LLC | Support Form"
+    />
+    <meta
+      property="og:description"
+      content="We pride ourselves on the very best customer service."
+    />
+
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
@@ -194,7 +209,7 @@
                   <!-- Button Box -->
                   <div class="button-box">
                     <a href="contact.html" class="theme-btn btn-style-one"
-                      ><span class="txt">Contact</span></a
+                      ><span class="txt">Contact Me</span></a
                     >
                   </div>
                   <!-- Social Box -->
