--- a/support.html
+++ b/support.html
@@ -88,7 +88,11 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
-    <meta property="og:image" content="images/resource/og-image.png" />
+    <!-- Open Graph / Social / Search preview content -->
+    <meta
+      property="og:image"
+      content="https://www.todeskobookkeeping.com/images/resource/og-image.png"
+    />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
