Replaced image and changed order in main slider

--- a/index.html
+++ b/index.html
@@ -298,6 +298,41 @@
                 <!-- Content Column -->
                 <div class="content-column col-lg-7 col-md-12 col-sm-12">
                   <div class="inner-column">
+                    <h1>Focus on the task at hand</h1>
+                    <div class="text">
+                      Let us worry about the other stuff.
+                    </div>
+                    <div class="btn-box">
+                      <div class="clearfix">
+                        <a href="contact.html" class="theme-btn mobile-btn btn-style-two"
+                          ><span class="txt">Book Now</span></a
+                        >
+                        <a href="#services" class="theme-btn mobile-btn btn-style-three"
+                          ><span class="txt">My Services</span></a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Image Column -->
+                <div class="image-column col-lg-5 col-md-12 col-sm-12">
+                  <div class="inner-column">
+                    <div class="image">
+                      <img src="images/main-slider/busy.png" alt="an illustration of a businessman with six arms each doing a different task" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="slide">
+            <div class="auto-container">
+              <div class="row clearfix">
+                <!-- Content Column -->
+                <div class="content-column col-lg-7 col-md-12 col-sm-12">
+                  <div class="inner-column">
                     <h1>Account On Us!</h1>
                     <div class="text">
                       We offer services for business owners, executives and
@@ -321,41 +356,6 @@
                   <div class="inner-column">
                     <div class="image">
                       <img src="images/main-slider/hierarchy.png" alt="a third-person abstract view of a corporate hierarchy" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="slide">
-            <div class="auto-container">
-              <div class="row clearfix">
-                <!-- Content Column -->
-                <div class="content-column col-lg-7 col-md-12 col-sm-12">
-                  <div class="inner-column">
-                    <h1>Focus on the task at hand</h1>
-                    <div class="text">
-                      Let us worry about your bookkeeping and payroll.
-                    </div>
-                    <div class="btn-box">
-                      <div class="clearfix">
-                        <a href="contact.html" class="theme-btn mobile-btn btn-style-two"
-                          ><span class="txt">Book Now</span></a
-                        >
-                        <a href="#services" class="theme-btn mobile-btn btn-style-three"
-                          ><span class="txt">My Services</span></a
-                        >
-                      </div>
-                    </div>
-                  </div>
-                </div>
-
-                <!-- Image Column -->
-                <div class="image-column col-lg-5 col-md-12 col-sm-12">
-                  <div class="inner-column">
-                    <div class="image">
-                      <img src="images/main-slider/busy.png" alt="an illustration of a businessman with six arms each doing a different task" />
                     </div>
                   </div>
                 </div>
