--- a/error-page.html
+++ b/error-page.html
@@ -91,7 +91,7 @@
     <!-- Open Graph / Social / Search preview content -->
     <meta
       property="og:image"
-      content="https://www.todeskobookkeeping.com/images/resource/og-image.png"
+      content="http://www.todeskobookkeeping.com/images/resource/og-image.png"
     />
     <meta property="og:type" content="website" />
     <meta
