Tweaking Open Graph tags

--- a/error-page.html
+++ b/error-page.html
@@ -89,10 +89,7 @@
     <meta name="theme-color" content="#ffffff" />
 
     <!-- Open Graph / Social / Search preview content -->
-    <meta
-      property="og:image"
-      content="https://www.todeskobookkeeping.com/images/resource/og-image.png"
-    />
+    <meta property="og:image" content="images/resource/og-image.png" />
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
