--- a/images.html
+++ b/images.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Lauren Todesko Bookkeeping, LLC | Support</title>
+    <title>Lauren Todesko Bookkeeping, LLC | Hosted Images</title>
 
     <!-- Favicons, App Icons and Themes -->
     <link
@@ -93,15 +93,15 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://www.todeskobookkeeping.com/support.html"
+      content="https://www.todeskobookkeeping.com/images.html"
     />
     <meta
       property="og:title"
-      content="Lauren Todesko Bookkeeping, LLC | Support Form"
+      content="Lauren Todesko Bookkeeping, LLC | Hosted Images"
     />
     <meta
       property="og:description"
-      content="We pride ourselves on the very best customer service."
+      content="A hidden place to host our images."
     />
 
     <!-- Stylesheets -->
@@ -122,19 +122,19 @@
       rel="stylesheet"
     />
 
-    <!--[if lt IE 9
-      ]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script
+    <!-- [if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script
     ><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
   </head>
 
-  <body class="contact">
+  <body class="not-found">
     <div class="page-wrapper">
       <!-- Preloader -->
       <div class="preloader"></div>
 
       <!-- Main Header-->
-      <header class="main-header">
+      <header class="main-header header-style-two">
         <!-- Header Upper -->
         <div class="header-upper">
           <div class="auto-container">
@@ -236,16 +236,16 @@
             </div>
           </div>
         </div>
-        <!-- End Header Upper -->
+        <!--End Header Upper-->
 
-        <!-- Mobile Menu -->
+        <!-- Mobile Menu  -->
         <div class="mobile-menu">
           <div class="menu-backdrop"></div>
           <div class="close-btn">
             <span class="icon far fa-times-circle"></span>
           </div>
 
-          <!-- Here the same menu as Header will show automatically via JavaScript -->
+          <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="/"
@@ -257,7 +257,7 @@
             </div>
 
             <ul class="navigation clearfix">
-              <!-- Keep This Empty / Menu will come through Javascript -->
+              <!--Keep This Empty / Menu will come through Javascript-->
             </ul>
           </nav>
         </div>
@@ -265,228 +265,29 @@
       </header>
       <!--End Main Header -->
 
-      <!-- Page Title -->
-      <section
-        class="page-title style-two"
-        style="background-image: url(images/resource/contact_header.png)"
-      >
+      <!-- Error Section -->
+      <section class="hosted-images">
         <div class="auto-container">
-          <h1>Help &amp; Support</h1>
-        </div>
-      </section>
-      <!-- End Page Title -->
-
-      <!-- Talk Section -->
-      <section class="talk-section">
-        <div class="auto-container">
-          <div class="row clearfix">
-            <!-- Title Column -->
-            <div class="title-column col-lg-5 col-md-12 cols-m-12">
-              <div class="inner-column">
-                <div class="sec-title">
-                  <h2>Contact Me</h2>
-                </div>
-                <ul class="contact-list">
-                  <li>
-                    <a href="#"
-                      ><span class="icon flaticon-skype"></span> Lauren
-                      Todesko</a
-                    >
-                  </li>
-                  <li>
-                    <a href="tel:+1-304-692-6223"
-                      ><span class="icon flaticon-whatsapp"></span>(304)
-                      692-6223</a
-                    >
-                  </li>
-                  <li>
-                    <a href="mailto:lauren@todeskobookkeeping.com"
-                      ><span class="icon flaticon-envelope"></span
-                      >lauren@todeskobookkeeping.com</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-
-            <!-- Form Column -->
-            <div class="form-column col-lg-7 col-md-12 cols-m-12">
-              <div class="inner-column">
-                <div class="column-text">
-                  Having issues? I'm here to help! <br />
-                  Fill out the form below and I'll get back to you ASAP!
-                </div>
-
-                <!-- Contact Form -->
-                <div class="contact-form">
-                  <form method="post" action="sendemail.php" id="contact-form">
-                    <div class="row clearfix">
-                      <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                        <input
-                          type="text"
-                          name="firstname"
-                          value=""
-                          placeholder="First Name"
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                        <input
-                          type="text"
-                          name="lastname"
-                          value=""
-                          placeholder="Last Name"
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                        <input
-                          type="email"
-                          name="email"
-                          value=""
-                          placeholder="Email"
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                        <input
-                          type="text"
-                          name="company"
-                          value=""
-                          placeholder="Company"
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <label for="input_file" class="input_files">
-                          Attachment (Optional)
-                          <i class="flaticon-paperclip"></i>
-                        </label>
-                        <input
-                          class="input_files"
-                          id="input_file"
-                          type="file"
-                          name="file"
-                          value=""
-                          placeholder=""
-                          required
-                        />
-                      </div>
-
-                      <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <textarea
-                          name="message"
-                          placeholder="Message*"
-                        ></textarea>
-                      </div>
-
-                      <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <h4>How can I help you?</h4>
-
-                        <span>
-                          <input
-                            type="checkbox"
-                            id="subject-1"
-                            class="d-none"
-                          />
-                          <label for="subject-1" class="subjects">
-                            <span>I need help with my company billings.</span>
-                          </label>
-                        </span>
-                        <span>
-                          <input
-                            type="checkbox"
-                            id="subject-2"
-                            class="d-none"
-                          />
-                          <label for="subject-2" class="subjects">
-                            <span
-                              >I found an issue or a bug on your website.</span
-                            >
-                          </label>
-                        </span>
-                        <span>
-                          <input
-                            type="checkbox"
-                            id="subject-3"
-                            class="d-none"
-                          />
-                          <label for="subject-3" class="subjects">
-                            <span>I'm looking to hire an accountant.</span>
-                          </label>
-                        </span>
-                        <span>
-                          <input
-                            type="checkbox"
-                            id="subject-4"
-                            class="d-none"
-                          />
-                          <label for="subject-4" class="subjects">
-                            <span>Something else.</span>
-                          </label>
-                        </span>
-                      </div>
-
-                      <div class="form-group col-lg-12 col-md-12 col-sm-12">
-                        <button type="submit" class="theme-btn btn-style-two">
-                          <span class="txt">Submit</span>
-                        </button>
-                      </div>
-                    </div>
-                  </form>
-                </div>
-                <!--End Contact Form-->
-                <div
-                  class="pattern-layer"
-                  style="background-image: url(images/icons/arrow-pattern.png)"
-                ></div>
-              </div>
-            </div>
+          <div class="image">
+            <img
+              src="images/resource/og-image.png"
+              alt="Open Graphic image for Facebook"
+            />
           </div>
-        </div>
-      </section>
-      <!-- End Talk Section -->
+          <h3>How did you find this page? Very sneaky...</h3>
 
-      <!-- Call To Action Section -->
-      <section class="call-to-action-section">
-        <div class="auto-container">
-          <div class="inner-container">
-            <div class="triangle-layer">
-              <span class="icon"
-                ><img src="images/icons/triangles.png" alt="animation"
-              /></span>
-              <span class="icon"
-                ><img src="images/icons/triangles.png" alt="animation"
-              /></span>
-              <span class="icon"
-                ><img src="images/icons/triangles.png" alt="animation"
-              /></span>
-            </div>
-            <h1>Ready to Get Started?</h1>
-            <div class="text">
-              Call or email me today to take your first step towards peace of
-              mind.
-            </div>
-            <div class="btns-box">
-              <a href="tel:+1-304-692-6223">
-                <span class="icon flaticon-phone-call"></span>
-                (304) 692-6223
-              </a>
-              <a href="mailto:lauren@todeskobookkeeping.com">
-                <span class="icon flaticon-envelope"></span>
-                Send an Email
-              </a>
-            </div>
+          <!-- Button Box -->
+          <div class="button-box text-center">
+            <a href="/" class="theme-btn btn-style-one"
+              ><span class="txt">Back to Homepage</span></a
+            >
           </div>
+          <!-- End Button Box -->
         </div>
       </section>
-      <!-- End Call To Action Section -->
+      <!-- End Error Section -->
 
-      <!-- Main Footer -->
+      <!-- Footer Style Two -->
       <footer class="main-footer">
         <div class="auto-container">
           <div class="upper-box">
@@ -507,8 +308,7 @@
                 <h4>Contact</h4>
                 <div class="address">
                   Lauren Todesko Bookkeeping, LLC <br />
-                  Kingwood, WV 26519 <br />
-                  <a href="tel:+1-304-692-6223">+1-304-692-6223</a>
+                  Kingwood, WV 26519
                 </div>
                 <!-- Social Box -->
                 <div class="social-box">
