--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       content="images/favicons/ms-icon-144x144.png"
     />
     <meta name="theme-color" content="#ffffff" />
-    <meta property="og:image" content="https://www.todeskobookkeeping.com/images/resource/og-image.png" />
+    <meta property="og:image" content="images/resource/og-image.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.todeskobookkeeping.com/" />
     <meta property="og:title" content="Lauren Todesko Bookkeeping, LLC Official Website" />
