--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
     <!-- Open Graph / Social / Search preview content -->
     <meta
       property="og:image"
-      content="images/resource/og-image.png"
+      content="https://todeskobookkeeping.com/images/resource/og-image.png"
     />
     <meta property="og:type" content="website" />
     <meta
