Edited copyright sig in footer

--- a/contact.html
+++ b/contact.html
@@ -560,7 +560,7 @@
               <!-- Copyright Column -->
               <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
                 <div class="copyright">
-                  Handcrafted with 💛 by KJ Magill &copy; 2021.
+                  Handcrafted by KJ Magill &copy; 2021.
                 </div>
               </div>
             </div>
