--- a/support.html
+++ b/support.html
@@ -322,7 +322,11 @@
 
                 <!-- Contact Form -->
                 <div class="contact-form">
-                  <form method="post" action="sendemail.php" id="contact-form">
+                  <form
+                    method="post"
+                    action="https://usebasin.com/f/daeebc900f67"
+                    id="contact-form"
+                  >
                     <div class="row clearfix">
                       <div class="form-group col-lg-6 col-md-6 col-sm-12">
                         <input
