Styling tweaks and fixed Error Page

--- a/contact.html
+++ b/contact.html
@@ -253,7 +253,7 @@
             <div class="nav-logo">
               <a href="/"
                 ><img
-                  src="images/logo.png"
+                  src="images/logo_dark.png"
                   alt="Lauren Todesko Bookkeeping, LLC"
                   title="Logo"
               /></a>
@@ -325,6 +325,7 @@
                   <form
                     method="post"
                     action="https://usebasin.com/f/daeebc900f67"
+                    enctype="multipart/form-data"
                     id="contact-form"
                   >
                     <div class="row clearfix">
