--- a/error-page.html
+++ b/error-page.html
@@ -139,7 +139,7 @@
       <!-- Main Header-->
       <header class="main-header header-style-two">
         <!-- Header Upper -->
-        <div class="header-upper">
+        <div class="header-upper blue-bg">
           <div class="auto-container">
             <div class="inner-container clearfix">
               <!-- Logo Box -->
@@ -158,7 +158,7 @@
               <div class="nav-outer clearfix">
                 <!-- Mobile Navigation Toggler For Mobile -->
                 <div class="mobile-nav-toggler">
-                  <span class="icon fas fa-bars"></span>
+                  <span class="icon fas fa-bars recolor-white"></span>
                 </div>
                 <!-- End Mobile Navigation Toggler For Mobile -->
 
@@ -253,7 +253,7 @@
             <div class="nav-logo">
               <a href="/"
                 ><img
-                  src="images/logo.png"
+                  src="images/logo_dark.png"
                   alt="Lauren Todesko Bookkeeping, LLC"
                   title="Logo"
               /></a>
@@ -276,26 +276,8 @@
           </div>
           <h3>Sorry... page not found!</h3>
 
-          <!-- Error Search Box -->
-          <div class="error-search-box">
-            <form method="post" action="contact.html">
-              <div class="form-group">
-                <input
-                  type="search"
-                  name="search-field"
-                  value=""
-                  placeholder="Search"
-                  required
-                />
-                <button type="submit">
-                  <span class="icon fa fa-search"></span>
-                </button>
-              </div>
-            </form>
-          </div>
-
           <!-- Button Box -->
-          <div class="button-box text-center">
+          <div class="button-box text-center bottom-spacing">
             <a href="/" class="theme-btn btn-style-one"
               ><span class="txt">Back to Homepage</span></a
             >
