--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="/"
-                ><img src="images/logo.png" alt="Lauren Todesko Bookkeeping, LLC" title="Logo"
+                ><img src="images/logo_dark.png" alt="Lauren Todesko Bookkeeping, LLC" title="Logo"
               /></a>
             </div>
 
@@ -694,7 +694,7 @@
 
                 <!-- Contact Form -->
                 <div class="contact-form">
-                  <form method="post" action="https://usebasin.com/f/daeebc900f67" id="contact-form">
+                  <form method="post" action="https://usebasin.com/f/daeebc900f67" enctype="multipart/form-data" id="contact-form">
                     <div class="row clearfix">
                       <div class="form-group col-lg-6 col-md-6 col-sm-12">
                         <input
